Fix pagination on smaller screens.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,3 +32,7 @@ body {
   background: #F1F1F1;
   margin-bottom: 5px;
 }
+
+.pagination-centered {
+  clear: both;
+}
